Added Infinite Horizons Pebbles (Stone and Andesite).
Added Infinite Horizons Wooden, Stone, and Iron Trowel (for obtaining pebbles and crushed raw ores).
Ported Shapeless and Shaped Crafting Recipes for Infinite Horizons 1.20.1 (Obviously not all used yet).
Added Infinite Horizons Stone and Iron Hammer (for early cobbleworks).
Started Alpha Questline.
Started Beta Questline.
Started Gamma Questline.

143 Total Downloads

1.21.1-1.1-Beta
Added Apothic Attributes (AttributesLib).
Added Applied Energistics 2.
Added Default Server Properties.
Updated Default World Type [Forge].
Added FTB Filter System.
Added Gateways to Eternity.
Added Generator Galore.
Added GuideME.
Added Placebo.

Updated Balm.
Updated Create.
Updated FTB Library (Forge).
Updated JourneyMap.
Updated Moonlight Lib.
Updated Puzzles Lib [Forge & Fabric].
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.
Updated Waystones.

Started Delta Questline (for early game storage).
Started Epsilon Questline (for gateways of eternity).
Started Zeta Questline (for power generation).
Started Eta Questline (for digital storage).

1.21.1-1.2-Beta
Added Create Sifting.
Added Pam's HarvestCraft 2 - Crops.
Added Pam's HarvestCraft 2 - Fantasy.
Added Pam's HarvestCraft 2 - Food Core.
Added Pam's HarvestCraft 2 - Food Extended.
Added Pam's HarvestCraft 2 - Trees.
Added Pam's HarvestCraft 2 Nerf.

Updated Applied Energistics 2.
Updated Balm.
Updated Collective.
Updated Cucumber Library.
Updated Entity Culling Fabric/Forge.
Updated FTB Quests (Forge).
Updated GuideME.
Updated JourneyMap.
Updated LootJS: KubeJS Addon.
Updated Moonlight Lib.
Updated Mystical Agradditions.
Updated Mystical Agriculture.
Updated Placebo.
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.

Added to Alpha questline (quests about villager trades, name tag).
Updated Beta questline.
GuideME.